# fundbeep_solana

./: .gitignore  env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.js
contracts/: Anchor.toml  Cargo.toml
contracts/programs/fundbeep-escrow/: Cargo.toml
contracts/programs/fundbeep-escrow/src/: lib.rs
public/: manifest.json  robots.txt  sitemap.xml
src/: App.jsx  index.css  solana.js  supabase.js
src/components/: AuthModal.jsx  ImpactReport.jsx  LiveFeed.jsx  Nav.jsx  NotificationPopup.jsx  ReputationScore.jsx  SaraAI.jsx  Sidebar.jsx
src/context/: WalletContext.js
src/hooks/: useIsMobile.js  usePageMeta.js
src/pages/: About.jsx  AdminDashboard.jsx  CampaignPage.jsx  CampaignWizard.jsx  Campaigns.jsx  Dashboard.jsx  Docs.jsx  EmbedWidget.jsx  Explore.jsx  Home.jsx  Kyc.jsx  Leaderboard.jsx  Lightpaper.jsx  MyContributions.jsx  Profile.jsx  Promote.jsx  PublicProfile.jsx
src/utils/: escrow.js  notifications.js  solana.js  walletProviders.js
