[package]
name = "fundbeep-escrow"
version = "0.1.0"
description = "FundBeep milestone-based crowdfunding escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fundbeep_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
